# study_is_interactive

./: .gitignore  Dockerfile  Makefile  README.md  canvas.py  docker-compose.yml  main.py  pyproject.toml  tem.py  tem2.py  temp.py
data/class_10/math/: index.py  real_numbers.py  গনসংখ্যা.py
data/একাদশ ও দ্বাদশ/আইসিটি/: সংখ্যা রূপান্তর.py
data/১০ম/গণিত/: _সূচিপত্র.py  index.py  গনসংখ্যা.py  পরিসংখ্যান লেখচিত্র.py  বাস্তব সংখ্যা.py
data/৩য়/গণিত/: জ্যামিতি.py
domain/: base.py  base_page.py
domain/models/: __init__.py  edge.py  line.py  number_state.py  path.py  point.py
domain/services/: __init__.py  angle_approximator.py  animate.py  graph_visualize.py  number_converter.py  st_canvas_converter.py  st_canvas_dict_converter.py  vertices_manipulator.py
domain/utils/: __init__.py  str_to_list.py  to_bangla_digit.py  to_roman.py
public/resources/class_10/math/: real_numbers.csv  real_numbers.py
tests/: test_angle_approximator.py
