[project]
name = "study-is-interactive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "streamlit==1.40.0", # streamlit canvas currently does not run in above version
    "streamlit-drawable-canvas>=0.9.3",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
